spacing fix

--- a/src/Questionaire/Questionaire.css
+++ b/src/Questionaire/Questionaire.css
@@ -70,13 +70,13 @@
 }
 .page{
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 100%;
   width: calc(100% - 64px);
   height: calc(100dvh - 102px);
   opacity: 0;
   transition: left 200ms linear, opacity 300ms linear;
-  margin-top: 16px;
+  margin-top: 0;
   z-index: 1;
   padding: 0 32px;
 }
